--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="/public/style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -13,17 +13,17 @@
             <ion-icon name="close-circle"></ion-icon>
         </span>
         <div class="form-box"></div>
-        <form action="/login" method="post">
+        <form action="/login" method="POST">
             <h2>Login</h2>
             <div class="input-box">
                 <span class="icon"> <ion-icon name="mail"></ion-icon></ion-icon></span>
-                <input type="total_sum" id="email" required>
+                <input type="text" id="email" name="email" required>
                 <label>Email</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                <input type="password" id="password" required>
+                <input type="password" id="password" name="password"  required>
                 <label>Password</label>     
             </div>
             <div class="remember-forgot">
