--- a/views/voter_regi.ejs
+++ b/views/voter_regi.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Singup</title>
+    <title>Voter Registration</title>
     <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
@@ -18,19 +18,19 @@
 
             <div class="input-box">
                 <span class="icon"> <ion-icon name="person"></ion-icon></ion-icon></span>
-                <input type="first_name" id="firstname" name="firstname" required>
+                <input type="firstname" id="firstname" name="firstname" required>
                 <label>First Name</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"> <ion-icon name="person"></ion-icon></ion-icon></span>
-                <input type="middle_name" id="middlename" name="middlename" required>
+                <input type="middlename" id="middlename" name="middlename" required>
                 <label>Middle Name</label>
             </div>
 
             <div class="input-box">
                 <span class="icon"> <ion-icon name="person"></ion-icon></ion-icon></span>
-                <input type="last_name" id="lastname" name="lastname" required>
+                <input type="lastname" id="lastname" name="lastname" required>
                 <label>Last Name</label>
             </div>
 
@@ -42,7 +42,7 @@
 
             <div class="input-box">
                 <span class="icon"> <ion-icon name="person"></ion-icon></ion-icon></span>
-                <input type="user_name" required id="username" name="username" required>
+                <input type="username" required id="username" name="username" required>
                 <label>Username</label>
             </div>
 
