--- a/views/voter_regi.ejs
+++ b/views/voter_regi.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
+    <!-- <h2><%= roles[2].role %></h2> -->
 
     <div class="wrapper_voter">
         <span class="icon-close">
@@ -55,6 +56,17 @@
             <div class="input-box">
                 <span class="icon"><ion-icon name="image"></ion-icon></span>
                 <input type="file" id="photo" name="photo" accept="image/*" required>
+            </div>
+            
+            <!-- Fetching the information from the roles table and desplaying it to the form -->
+            <div class="input-box">
+                <span class="icon"><ion-icon name="briefcase"></ion-icon></span>
+                <select id="role" name="role" required>
+                    <option value="" disabled selected>Select Role</option>
+                    <% roles.forEach(role => { %>
+                        <option value="<%= role.id %>"><%= role.role %></option>
+                    <% }); %>
+                </select>
             </div>
 
             <div class="myremember-fo">
