I fetch the number of users in the database and display it to the dashboard

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,7 +36,7 @@
     <aside id="sidebar">
         <div class="sidebar-title">
             <div class="sidebar-brand">
-                <span class="material-icons-outlined">currency_exchange</span>
+                <span class="material-icons-outlined">how_to_vote</span>
             </div>
             <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
         </div>
@@ -85,7 +85,7 @@
                     <h3>Total number of registered voters</h3>
                     <span class="material-icons-outlined">edit</span>   
                 </div>
-                <h1>8000</h1>
+                <h1><%= userCount %></h1>
             </div>
 
             <div class="card">
@@ -93,7 +93,8 @@
                     <h3>Total number of votes</h3>
                     <span class="material-icons-outlined">how_to_vote</span>
                 </div>
-                <h1>800</h1>
+                <h1>500</h1>
+                
             </div>
 
             <div class="main-title">
